# MCGreen

./: README.md
dev/: CMakeLists.txt  package.xml
dev/Games/: display_class.py  display_controller.py  error.py  game_interface.py  menu.py  non_use.py  requirements.txt
dev/Games/electricity_quiz/: ElectricityQuiz.py  electric_quiz.py  questions.json
dev/Games/face stuff/: notes.txt
dev/Games/recycle_it/: Recycle.py  explanation.json  game_file.py
dev/Games/sustainability_quiz/: SustainabilityQuiz.py  questions.json  sustainability_quiz.py
dev/Games/water_calculator/: water_calculator.py
dev/Games/whats_wrong/: Game_File.py  whats_wrong.py
dev/Launch/: debug.launch  mcgreen.launch
dev/assets/: remote_control_simulator.txt
dev/msg/: Arm.msg
dev/scripts/: move_file.py  ros_startup.sh
dev/src/NUC/: mode_select.py  movement_output.py  remote_control_simulator.py  remote_sensors_processor.py
dev/src/RPi/lower_pi/: arm_sensor.py  drivetrain_driver.py  head_servo_driver.py  linear_actuator_driver.py  oled_screen_controller.py
dev/src/RPi/upper_pi/: face_controller.py  remote_control_receiver.py
prod/: CMakeLists.txt  package.xml
prod/Games/: display_class.py  display_controller.py  error.py
prod/Games/electricity_quiz/: ElectricityQuiz.py  questions.json
prod/Games/recycle_it/: Recycle.py  explanation.json
prod/Games/sustainability_quiz/: SustainabilityQuiz.py
prod/Games/water_calculator/: water_calculator.py
prod/Games/whats_wrong/: Game_File.py  whats_wrong.py
prod/Launch/: debug.launch  mcgreen.launch
prod/debug/: remote_control_simulator.py  remote_control_simulator.txt
prod/debug/Face_Matrix/: face_test.py  image.py
prod/msg/: Array.msg  Remote.msg  Sensor.msg
prod/scripts/: move_file.py  ros_startup.sh
prod/src/NUC/: mode_select.py  movement_output.py  remote_sensors_processor.py
(+7 files in other folders)
